[gd_scene load_steps=17 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/AI/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/AI/2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/AI/3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/AI/4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/AI/5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/AI/6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/AI/7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/AI/8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/AI/dead1.png" type="Texture" id=10]
[ext_resource path="res://FOVBossEnemy.gd" type="Script" id=11]
[ext_resource path="res://Bossgothit.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 125, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 30 )

[node name="BossEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 40

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0307035, 2.38419e-07 )
scale = Vector2( 0.113475, 0.115732 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, 0 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -152, 2 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 1.5

[node name="Position2Ds" type="Position2D" parent="Area2D"]
position = Vector2( -32, 0 )

[node name="Timer3" type="Timer" parent="Area2D"]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
enabled = true
cast_to = Vector2( 0, 33 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 32, -23 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -23, -3 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 13, -23 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( -23, -23 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( -4, -23 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( -4, -3 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( 13, -3 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 32, -3 )

[node name="Position2D9" type="Position2D" parent="."]
position = Vector2( 32, 17 )

[node name="Position2D10" type="Position2D" parent="."]
position = Vector2( 13, 17 )

[node name="Position2D11" type="Position2D" parent="."]
position = Vector2( -4, 17 )

[node name="Position2D12" type="Position2D" parent="."]
position = Vector2( -23, 17 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 32, 0 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Area2D/Timer2" to="Area2D" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Area2D/Timer3" to="Area2D" method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_area_entered"]
